<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="720px"
    android:layout_height="1280px"
    android:screenOrientation="portrait"
    tools:context=".ui.main.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/doge_limpiador___2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/estado"
            android:layout_width="215dp"
            android:layout_height="39dp"
            android:layout_marginTop="16dp"
            android:background="@color/desocupado"
            android:text="@string/desocupado"
            android:textColor="#00B8D4"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.026"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/boton_activar"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:text="@string/trabajar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="83dp"
                android:layout_height="71dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ruta_2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="76dp"
                android:layout_height="63dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ruta_1" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="67dp"
                android:layout_height="68dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="4dp"
                android:rotation="90"
                android:rotationY="180"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ruta_1" />

            <View
                android:id="@+id/divider4"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <RadioGroup
                android:id="@+id/ruta_elegida"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkedButton="@id/ruta1"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView2">

                <RadioButton
                    android:id="@+id/ruta1"
                    android:layout_width="101dp"
                    android:layout_height="wrap_content"
                    android:text="@string/ruta1"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/ruta2"
                    android:layout_width="86dp"
                    android:layout_height="match_parent"
                    android:text="@string/ruta2"
                    android:textSize="12sp" />

                <RadioButton
                    android:id="@+id/ruta3"
                    android:layout_width="85dp"
                    android:layout_height="48dp"
                    android:minHeight="48dp"
                    android:text="@string/ruta3"
                    android:textSize="12sp" />

            </RadioGroup>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="0dp"
            android:layout_height="63dp"
            android:background="#FFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

            <EditText
                android:id="@+id/numero_ciclos"
                android:layout_width="148dp"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:ems="10"
                android:hint="número de ciclos"
                android:inputType="numberDecimal"
                android:maxLength="1"
                android:minHeight="48dp"
                android:textColor="#000000"
                android:textColorHint="#757575"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.529" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Switch
            android:id="@+id/estado_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="140dp"
            android:layout_marginTop="28dp"
            android:clickable="false"
            android:minWidth="48dp"
            android:minHeight="48dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/act_bluetooth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:fontFamily="sans-serif"
            android:text="Conectar"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textSize="12sp"
            app:layout_constraintStart_toEndOf="@+id/estado"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>